fix faq links and redirect

--- a/locales/es/home.json
+++ b/locales/es/home.json
@@ -31,11 +31,11 @@
     "questions": [
       {
         "q": "¿Qué tipos de clases de yoga ofrecen en la Ciudad de México?",
-        "a": "Ofrecemos una amplia variedad de estilos de yoga como Hatha, Vinyasa, Aéreo y Kundalini. También organizamos regularmente talleres temáticos como sesiones de sanación sonora o clases de filosofía del yoga. Esta variedad asegura que todos puedan encontrar una clase que resuene con su alma. Consulta nuestro horario actual de clases en: <a href='https://sgpyoga.co/classes' target='_blank' rel='noopener'>sgpyoga.co/classes</a>."
+        "a": "Ofrecemos una amplia variedad de estilos de yoga como Hatha, Vinyasa, Aéreo y Kundalini. También organizamos regularmente talleres temáticos como sesiones de sanación sonora o clases de filosofía del yoga. Esta variedad asegura que todos puedan encontrar una clase que resuene con su alma. Consulta nuestro horario actual de clases en: <a href='https://sgpyoga.co/es/classes' target='_blank' rel='noopener'>sgpyoga.co/classes</a>."
       },
       {
         "q": "¿Dónde están ubicadas sus clases de yoga?",
-        "a": "Actualmente, ofrecemos clases en dos ubicaciones distintas en la Ciudad de México - Hari Om y Aguacate. Hari Om es un espacio pequeño pero acogedor y tranquilo en Letrán Valle, Benito Juárez (Calle Tres Zapotes 128), mientras que Aguacate es un hermoso estudio más grande en Coyoacán (Callejón de Aguacate 3), muy cerca del Parque de los Viveros. Puedes encontrar las ubicaciones exactas con enlaces de Google Maps en nuestra página sobre nosotros: <a href='https://sgpyoga.co/about' target='_blank' rel='noopener'>sgpyoga.co/about</a>."
+        "a": "Actualmente, ofrecemos clases en dos ubicaciones distintas en la Ciudad de México - Hari Om y Aguacate. Hari Om es un espacio pequeño pero acogedor y tranquilo en Letrán Valle, Benito Juárez (Calle Tres Zapotes 128), mientras que Aguacate es un hermoso estudio más grande en Coyoacán (Callejón de Aguacate 3), muy cerca del Parque de los Viveros. Puedes encontrar las ubicaciones exactas con enlaces de Google Maps en nuestra página sobre nosotros: <a href='https://sgpyoga.co/es/about' target='_blank' rel='noopener'>sgpyoga.co/about</a>."
       },
       {
         "q": "¿Cuánto cuestan sus clases de yoga en CDMX?",
@@ -75,7 +75,7 @@
       },
       {
         "q": "¿Ofrecen talleres de yoga, retiros o formaciones de maestros?",
-        "a": "¡Sí! Organizamos regularmente eventos y experiencias especiales de yoga más allá de las clases semanales. Nuestros talleres en la Ciudad de México abarcan filosofía del yoga, sanación sonora, kirtan y más. Los retiros tienen lugar en ubicaciones remotas en México e internacionalmente - cada uno tiene un tema diferente y atiende diferentes necesidades. Las formaciones de maestros están disponibles como inmersiones intensivas o programas de fin de semana a ritmo más lento. Consulta nuestros próximos eventos en <a href='https://sgpyoga.co/events' target='_blank' rel='noopener'>sgpyoga.co/events</a>."
+        "a": "¡Sí! Organizamos regularmente eventos y experiencias especiales de yoga más allá de las clases semanales. Nuestros talleres en la Ciudad de México abarcan filosofía del yoga, sanación sonora, kirtan y más. Los retiros tienen lugar en ubicaciones remotas en México e internacionalmente - cada uno tiene un tema diferente y atiende diferentes necesidades. Las formaciones de maestros están disponibles como inmersiones intensivas o programas de fin de semana a ritmo más lento. Consulta nuestros próximos eventos en <a href='https://sgpyoga.co/es/events' target='_blank' rel='noopener'>sgpyoga.co/events</a>."
       },
       {
         "q": "¿Cuál es su política de cancelación? ¿Necesito cancelar con anticipación?",
