--- a/locales/en/classes.json
+++ b/locales/en/classes.json
@@ -69,6 +69,35 @@
       "description": "Unleash your body's potential with breathtaking aerial sequences performed in silk hammocks"
     }
   },
+  "pricing": {
+    "title": "Pricing & Packages",
+    "subtitle": "The more you practice, the more you save! Choose the package that fits your yoga journey.",
+    "dropIn": {
+      "name": "Drop-in",
+      "description": "Perfect for trying us out",
+      "perClass": "per class"
+    },
+    "pack4": {
+      "name": "4 Classes",
+      "description": "Once a week practice",
+      "perClass": "$225 per class",
+      "savings": "Save $100 MXN"
+    },
+    "pack8": {
+      "name": "8 Classes",
+      "description": "Twice a week practice",
+      "perClass": "$200 per class",
+      "savings": "Save $400 MXN"
+    },
+    "pack12": {
+      "name": "12 Classes",
+      "description": "Three times a week practice",
+      "perClass": "$175 per class",
+      "savings": "Save $900 MXN",
+      "badge": "Best Value"
+    },
+    "note": "With our packages, you can attend regular classes with all of our teachers as shown in the schedule above. Packages are valid for one calendar month from purchase date. Unused classes do not roll over, so make sure to use them all!"
+  },
   "cta": {
     "title": "Ready to Begin?",
     "text": "Contact us to learn more about our classes and upcoming events. For quick responses, it's best to drop us a message on WhatsApp - but you can also send us an email.",
