update faq question about pricing

--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -39,7 +39,7 @@
       },
       {
         "q": "How much do your yoga classes in CDMX cost?",
-        "a": "First-time students can try any class for just 100 pesos! Regular drop-in rates are 250 pesos for 1-hour classes (Hatha, Vinyasa, Aerial) and 300 pesos for 1.5-hour classes (Kundalini). We also offer discounted monthly passes of 4 or 8 classes - contact us for more details on those. We pride ourselves on offering exceptional quality at an accessible price - yoga is meant for all of us, after all."
+        "a": "First-time students can try any class for just $100 MXN! After that, drop-in classes are $250 MXN each. We also offer monthly packages that help you save more the more you practice: 4 classes for $900 MXN (save $100), 8 classes for $1,600 MXN (save $400), or 12 classes for $2,100 MXN (save $900). Packages are valid for one month and give you access to all regular classes with any of our teachers. Check out our <a href='/classes.html'>classes page</a> for full details!"
       },
       {
         "q": "Are your yoga classes suitable for beginners?",
