--- a/locales/es/home.json
+++ b/locales/es/home.json
@@ -39,7 +39,7 @@
       },
       {
         "q": "¿Cuánto cuestan sus clases de yoga en CDMX?",
-        "a": "¡Los estudiantes primerizos pueden probar cualquier clase por solo 100 pesos! Las tarifas regulares son de 250 pesos para clases de 1 hora (Hatha, Vinyasa, Aéreo) y 300 pesos para clases de 1.5 horas (Kundalini). También ofrecemos pases mensuales con descuento de 4 u 8 clases - contáctanos para más detalles sobre estos. Nos enorgullecemos de ofrecer calidad excepcional a un precio accesible - después de todo, el yoga es para todos nosotros."
+        "a": "¡Los estudiantes primerizos pueden probar cualquier clase por solo $100 MXN! Después, las clases sueltas cuestan $250 MXN cada una. También ofrecemos paquetes mensuales que te ayudan a ahorrar más mientras más practiques: 4 clases por $900 MXN (ahorra $100), 8 clases por $1,600 MXN (ahorra $400), o 12 clases por $2,100 MXN (ahorra $900). Los paquetes son válidos por un mes y te dan acceso a todas las clases regulares con cualquiera de nuestros maestros. ¡Visita nuestra <a href='/classes.html'>página de clases</a> para más detalles!"
       },
       {
         "q": "¿Sus clases de yoga son adecuadas para principiantes?",
