--- a/locales/en/events.json
+++ b/locales/en/events.json
@@ -83,6 +83,17 @@
       "fullDescription": "Aerial yoga is getting increasingly popular, not only because it looks great, but also because it makes more advanced poses accessible to beginners from day 1. Our 50-Hour hybrid program is ideal for yoga teachers who want to expand their repertoire, but you can also participate as an absolute beginner. Our sessions will take place over the weekends in the beautiful Yoguitería in Calarca, Colombia. Although designed primarily as an in-person experience, this teacher training can be taken partially online - but two in-person weekends are required to obtain your Yoga Alliance certification.",
       "instructor": "Camila & Harjeet",
       "price": "$2,000,000 COP ($10,000 MXN)"
+    },
+    "aerial-yoga-sound-healing_30jan2026": {
+      "title": "Aerial Yoga Sound Healing",
+      "category": "Workshop",
+      "date": "January 30, 2026",
+      "time": "19:30 - 20:30 PM",
+      "location": "Hari Om Studio, Mexico City",
+      "shortDescription": "Immerse yourself in gentle, restorative aerial yoga accompanied by a deep sound healing session",
+      "fullDescription": "This unique session is a blend of healing aerial yoga movements and sound therapy. We will start with a gentle sequence of poses utilizing silk hammocks, and towards the end you will listen to sound bowls and live mantra chanting while suspended in the air.",
+      "instructor": "Harjeet & Camila",
+      "price": "$400 MXN"
     }
   },
   "eventTypes": {
