add teacher training and retreat events

--- a/locales/en/events.json
+++ b/locales/en/events.json
@@ -94,6 +94,28 @@
       "fullDescription": "This unique session is a blend of healing aerial yoga movements and sound therapy. We will start with a gentle sequence of poses utilizing silk hammocks, and towards the end you will listen to sound bowls and live mantra chanting while suspended in the air.",
       "instructor": "Harjeet & Camila",
       "price": "$400 MXN"
+    },
+    "aerial-teacher-training_feb2026": {
+      "title": "100-Hour Aerial Yoga Teacher Training",
+      "category": "Teacher Training",
+      "date": "February 21 - May 2, 2026",
+      "time": "Weekends (Saturdays & Sundays)",
+      "location": "Aguacate Studio, Mexico City",
+      "shortDescription": "Become an aerial yoga teacher with our specialized training program.",
+      "fullDescription": "Aerial yoga is getting increasingly popular, not only because it looks great, but also because it makes more advanced poses accessible to beginners from day 1. Our 100-Hour in-person program is ideal for yoga teachers who want to expand their repertoire, but you can also participate as an absolute beginner. We will cover all the essential modules such as alignment, anatomy, philosophy, and more. Our sessions will take place on weekends at Aguacate Studio, Mexico City.",
+      "instructor": "Camila & Harjeet",
+      "price": "$28,000 MXN"
+    },
+    "yoga-healing-retreat_may2026": {
+      "title": "Yoga For Healing",
+      "category": "Retreat",
+      "date": "May 14-18, 2026",
+      "time": "3 Full Days",
+      "location": "Lake Atitlán, Guatemala",
+      "shortDescription": "A transformative retreat focused on healing and inner connection at the mystical Lake Atitlán.",
+      "fullDescription": "This healing-focused retreat is designed to help you reconnect with yourself and restore inner balance. Set against the breathtaking backdrop of Lake Atitlán, one of Guatemala's most sacred and mystical places, we will practice Kundalini yoga, experience sound healing sessions, and explore meditation techniques to deepen your inner journey. Food, accommodation, and transportation from the airport to the retreat center and back are all included. For the adventurous souls who want to explore more of Guatemala, it is possible to extend the retreat by 3 days for a challenging hike to Volcano Acatenango & Fuego at an additional cost.",
+      "instructor": "Harjeet & Camila",
+      "price": "TBC"
     }
   },
   "eventTypes": {
