--- a/locales/es/events.json
+++ b/locales/es/events.json
@@ -94,6 +94,28 @@
       "fullDescription": "Esta sesión única es una mezcla de movimientos curativos de yoga aéreo y terapia de sonido. Comenzaremos con una secuencia suave de posturas utilizando hamacas de seda, y hacia el final escucharás cuencos de sonido y canto de mantras en vivo mientras estás suspendido en el aire.",
       "instructor": "Harjeet y Camila",
       "price": "$400 MXN"
+    },
+    "aerial-teacher-training_feb2026": {
+      "title": "Formación de Maestros de Yoga Aéreo 100 Horas",
+      "category": "Formación de Maestros",
+      "date": "21 de febrero - 2 de mayo, 2026",
+      "time": "Fines de semana (Sábados y Domingos)",
+      "location": "Aguacate Studio, Ciudad de México",
+      "shortDescription": "Convértete en maestro de yoga aéreo con nuestro programa de formación especializado.",
+      "fullDescription": "El yoga aéreo está ganando cada vez más popularidad, no solo porque se ve genial, sino también porque hace que posturas más avanzadas sean accesibles para principiantes desde el día 1. Nuestro programa presencial de 100 horas es ideal para maestros de yoga que desean ampliar su repertorio, pero también puedes participar como principiante absoluto. Cubriremos todos los módulos esenciales como alineación, anatomía, filosofía y más. Nuestras sesiones se llevarán a cabo los fines de semana en Aguacate Studio, Ciudad de México.",
+      "instructor": "Camila y Harjeet",
+      "price": "$28,000 MXN"
+    },
+    "yoga-healing-retreat_may2026": {
+      "title": "Yoga Para Sanar",
+      "category": "Retiro",
+      "date": "14-18 de mayo, 2026",
+      "time": "3 Días Completos",
+      "location": "Lago de Atitlán, Guatemala",
+      "shortDescription": "Un retiro transformador enfocado en la sanación y la conexión interior en el místico Lago de Atitlán.",
+      "fullDescription": "Este retiro enfocado en la sanación está diseñado para ayudarte a reconectarte contigo mismo y restaurar el equilibrio interior. Con el impresionante telón de fondo del Lago de Atitlán, uno de los lugares más sagrados y místicos de Guatemala, practicaremos Kundalini yoga, experimentaremos sesiones de sanación con sonido y exploraremos técnicas de meditación para profundizar tu viaje interior. La comida, el alojamiento y el transporte desde el aeropuerto hasta el centro de retiro y de regreso están incluidos. Para las almas aventureras que quieran explorar más de Guatemala, es posible extender el retiro por 3 días para una desafiante caminata al Volcán Acatenango y Fuego con un costo adicional.",
+      "instructor": "Harjeet y Camila",
+      "price": "Por confirmar"
     }
   },
   "eventTypes": {
