--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -4,13 +4,18 @@
     "about": "Acerca De",
     "classes": "Clases",
     "events": "Eventos",
+    "certifications": "Certificaciones",
+    "certificationsDropdown": {
+      "aerial100": "Formación de Profesores de Yoga Aéreo - 100 Horas"
+    },
     "blog": "Blog"
   },
   "pageTitles": {
     "home": "SGP Yoga - Clases de Yoga en la Ciudad de México | Estudio CDMX",
     "about": "Acerca de SGP Yoga - Kundalini, Vinyasa y Yoga Aéreo CDMX",
     "classes": "Horario de Clases de Yoga Ciudad de México | SGP Yoga CDMX",
-    "events": "Talleres de Yoga, Retiros y Formación de Maestros | SGP Yoga CDMX"
+    "events": "Talleres de Yoga, Retiros y Formación de Maestros | SGP Yoga CDMX",
+    "certificationsAerial100": "Formación de Profesores de Yoga Aéreo 100 Horas | SGP Yoga"
   },
   "buttons": {
     
@@ -26,6 +31,7 @@
       "about": "Acerca De",
       "classes": "Clases",
       "events": "Eventos",
+      "certifications": "Certificaciones",
       "blog": "Blog"
     },
     "contact": {
