--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -38,7 +38,7 @@
       "title": "Contact Us",
       "email": "Email",
       "phone": "Phone",
-      "emailValue": "satgurprasaadyoga@gmail.com",
+      "emailValue": "team@sgpyoga.co",
       "phoneValue": "+52 55 3906 1305"
     },
     "social": {
