--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -38,7 +38,7 @@
       "title": "Contáctanos",
       "email": "Correo",
       "phone": "Teléfono",
-      "emailValue": "satgurprasaadyoga@gmail.com",
+      "emailValue": "team@sgpyoga.co",
       "phoneValue": "+52 55 3906 1305"
     },
     "social": {
