--- a/locales/es/certifications.json
+++ b/locales/es/certifications.json
@@ -98,7 +98,17 @@
   },
   "instructors": {
     "title": "Conoce a Tus Maestros",
-    "subtitle": "Aprende de practicantes experimentados de yoga aéreo"
+    "subtitle": "Aprende de practicantes experimentados de yoga aéreo",
+    "camila": {
+      "name": "Camila",
+      "role": "Entrenadora Principal",
+      "bio": "Camila es una apasionada maestra de Yoga Aéreo y Vinyasa que funge como entrenadora principal de nuestro programa de Certificación de Yoga Aéreo. Con profunda experiencia en alineación corporal y técnica aérea, guía a los estudiantes a través de los aspectos prácticos de la certificación—desde posturas fundamentales hasta secuencias avanzadas. Su estilo de enseñanza paciente y precisión técnica te ayudarán a dominar el arte del yoga aéreo."
+    },
+    "harjeet": {
+      "name": "Harjeet",
+      "role": "Entrenador de Apoyo",
+      "bio": "Harjeet es un maestro experimentado de Kundalini Yoga certificado por KRI que funge como entrenador de apoyo para la Certificación de Yoga Aéreo. Él dirige los módulos teóricos del programa, cubriendo filosofía yóguica, pranayama, mantra y prácticas de meditación. Su profundidad de conocimiento y presencia tranquila crean una base para comprender las dimensiones espirituales de la práctica."
+    }
   },
   "testimonials": {
     "title": "Lo Que Dicen Nuestros Graduados",
