update certifications testimonials assets & order

--- a/locales/en/certifications.json
+++ b/locales/en/certifications.json
@@ -116,12 +116,17 @@
     "items": [
       {
         "quote": "Completing the aerial yoga training was fulfilling one of my life goals. From the beauty of the suspended body comes an awareness of balance, strength, and coordination to extend movement in the air. This practice allows me to feel more confident in myself, accept the nature of my body, and work on sensuality in a subtle way.\n\nI didn't hesitate to take the certification because I knew I would have a great teacher who has accompanied me through this long journey and allowed me to plant seeds and blossom in the world of yoga. She continues to support me through the process, and the fact that she believes in me and shares her knowledge and experiences makes my being expand with joy.",
-        "name": "Ika Hermenegilda",
+        "name": "Jenny",
         "location": "Colombia"
       },
       {
         "quote": "For me, the certification was a beautiful process in which I could trust myself and my abilities. Thanks to everything they shared with us, I was able to reflect on many things about my life—how I relate to the world, how I process lived experiences. All the practices taught me so much about myself, and also about opening up to others, observing, listening, receiving.\n\nThe certification came at the right moment for me because I was going through so many things I couldn't understand, and the space I had during the training helped me channel that noise and digest it. I felt accompanied at every moment, with excellent guidance. I'm deeply grateful to have been part of this learning experience that broadened my perspective.",
         "name": "Dani",
+        "location": "Mexico"
+      },
+      {
+        "quote": "Participating in this training has been a transformative journey that exceeded all my expectations. While the physical progress was remarkable, the real gift was the boost of confidence I experienced in the process. I managed to overcome fears that used to paralyze me and reached goals that, honestly, I never thought were possible for me.\n\nThe confidence that now lives within me is the most valuable resource I can now share with my students in every class. Throughout the journey, I felt deeply accompanied and supported by Cami and Harjeet; their human warmth and the clarity with which they explain every detail make the complex feel simple. I felt in a safe space to grow.",
+        "name": "Aro",
         "location": "Mexico"
       },
       {
@@ -133,11 +138,6 @@
         "quote": "From day one, I understood that aerial yoga isn't just about hanging from a fabric. My sankalpa for this experience was: 'I want to remember my power, inhabit my body with presence, and guide others to find confidence in theirs.'\n\nWith the silk, I discovered that letting go doesn't always mean falling—sometimes letting go means holding myself differently.",
         "name": "Dani",
         "location": "Colombia"
-      },
-      {
-        "quote": "Participating in this training has been a transformative journey that exceeded all my expectations. While the physical progress was remarkable, the real gift was the boost of confidence I experienced in the process. I managed to overcome fears that used to paralyze me and reached goals that, honestly, I never thought were possible for me.\n\nThe confidence that now lives within me is the most valuable resource I can now share with my students in every class. Throughout the journey, I felt deeply accompanied and supported by Cami and Harjeet; their human warmth and the clarity with which they explain every detail make the complex feel simple. I felt in a safe space to grow.",
-        "name": "Aro",
-        "location": "Mexico"
       }
     ]
   },
