update class schedule

--- a/locales/en/classes.json
+++ b/locales/en/classes.json
@@ -31,7 +31,8 @@
     "hatha": "Hatha Yoga",
     "aerial": "Aerial Yoga",
     "aerialFlow": "Aerial Yoga Flow",
-    "aerialPilates": "Aerial Pilates"
+    "aerialPilates": "Aerial Pilates",
+    "aerialBeginners": "Aerial Yoga Beginners"
   },
   "teachers": {
     "harjeet": "Harjeet",
