--- a/locales/es/classes.json
+++ b/locales/es/classes.json
@@ -31,7 +31,8 @@
     "hatha": "Hatha Yoga",
     "aerial": "Yoga Aéreo",
     "aerialFlow": "Yoga Aéreo Flow",
-    "aerialPilates": "Pilates Aéreo"
+    "aerialPilates": "Pilates Aéreo",
+    "aerialBeginners": "Yoga Aéreo Principiantes"
   },
   "teachers": {
     "harjeet": "Harjeet",
