fix certification page issues & update translations

--- a/locales/en/certifications.json
+++ b/locales/en/certifications.json
@@ -5,8 +5,8 @@
   },
   "intro": {
     "title": "Discover Aerial Yoga",
-    "paragraph1": "Aerial yoga combines traditional yoga postures with the support of a silk hammock suspended from the ceiling. This unique practice allows you to explore poses from a new perspective—floating, inverting, and stretching in ways that ground-based yoga simply cannot offer. The hammock supports your body weight, making challenging poses more accessible while deepening stretches and building core strength.",
-    "paragraph2": "Our 100-hour certification program goes beyond the physical practice. You'll learn the art of teaching aerial yoga safely and effectively, understanding body mechanics, rigging fundamentals, and how to guide students of all levels through transformative aerial sequences. Whether you're a yoga teacher looking to expand your offerings or a dedicated practitioner ready to share your passion, this training provides the foundation you need.",
+    "paragraph1": "Aerial yoga combines traditional yoga postures with the support of a silk hammock suspended from the ceiling. This unique practice allows you to explore poses from a new perspective—floating, inverting, and stretching in ways that ground-based yoga simply cannot offer. It is a fusion of asana, pilates and performance. The hammock supports your body weight, making challenging poses more accessible while deepening stretches, building core strength, and lengthening your spine.",
+    "paragraph2": "Our 100-hour certification program goes beyond the physical practice. You'll learn the art of teaching aerial yoga safely and effectively, understanding body mechanics, hammock setup, and how to guide students of all levels through transformative aerial sequences. Whether you're a yoga teacher looking to expand your offerings or a dedicated practitioner ready to share your passion, this training provides the foundation you need.",
     "audienceTitle": "This Program Is For You If...",
     "audienceItems": [
       "You're a certified yoga teacher wanting to add aerial yoga to your teaching repertoire",
@@ -143,7 +143,7 @@
   },
   "cta": {
     "title": "Ready to Begin Your Journey?",
-    "description": "Our next training runs from March 7 to May 10, 2026, on weekends at Aguacate Studio in Mexico City. Reach out to reserve your spot or to learn more about this transformative experience.",
+    "description": "Our next training runs from March 7 to May 10, 2026, on weekends at Aguacate and Hari Om studios in Mexico City. Reach out to reserve your spot or to learn more about this transformative experience.",
     "investment": {
       "fullPayment": {
         "title": "Full Payment",
